Noteworthy changes for version 2.5.2 (unreleased)
=================================================

 * Fixed re-encryption of drafts after modification
   if draft encryption is enabled. (T5812)

Noteworthy changes for version 2.5.1 (2021-12-01)
=================================================

 * Improved ReadAsPlain detection and plaintext
   handling. (T5681)

Noteworthy changes for version 2.5.0 (2021-06-11)
=================================================

 * Changed encryption code to work even more on
 OOM. This avoids temporarily storing unencrypted
 data to MAPI when asynchronously encrypting.
 (T5022)

 * Added support to encrypt / sign Outlook internal
 data objects as attachments like mails, calendar
 entries and contacts. (T4184)

Noteworthy changes for version 2.4.10 (2021-01-08)
=================================================

 * Fixed a logic error in GpgOL's recipient selection
   which caused one recipient to be ignored.

Noteworthy changes for version 2.4.9 (2021-01-07)
=================================================

 * Fixed selection of "No Key" for a recipient.
   (T5223)

 * Fix preview of PGP mails when auto-key-retrieve
   is enabled. (T5164)


Noteworthy changes for version 2.4.8 (2020-11-20)
=================================================

 * Fixed attachment realted isses because of preview.


Noteworthy changes for version 2.4.7 (2020-09-04)
=================================================

 * Fixed an issue that unencrypted drafts were sent
   to the server even when draft encryption is on.
   (T5022)


Noteworthy changes for version 2.4.6 (2020-07-22)
=================================================

 * Improved handling of protected headers mails. (T4796)

 * Experimental code for combined S/MIME and OpenPGP
 operations and protected headers. Options are:
 combinedOpsEnabled, encryptSubject, splitBCCMails

 * Fixed handling of WKS mails. (T4839)

 * Improved Addressbook integration. (T4874)
